Fix TaskBar display (shrink TaskItems and cut off text with ellipsis)

--- a/sass/Components/Atoms/_a_TaskItem.scss
+++ b/sass/Components/Atoms/_a_TaskItem.scss
@@ -19,11 +19,25 @@
    height: 100%;
    width: 150px;
 
+   flex: 1 1 0;
+   max-width: 150px;
+
+   overflow: hidden;
+   text-overflow: ellipsis;
+   white-space: nowrap;
+   transition: flex-basis 0.2s ease, max-width 0.2s ease;
+
    &:active,
    &:focus,
    &:focus-visible,
    &_focused {
       @include mixins.border-sunken;
       background-color: $color-grey-lightest;
+   }
+
+   &_label {
+      white-space: nowrap;
+      text-overflow: ellipsis;
+      overflow: hidden;
    }
 }
